# triturus

./: .gitignore  LICENSE  README.md  pyproject.toml
baselines/: lm2exp.py  logmm2exp.py  lt2exp.py
benchmarks/: add.py  lm2exp.py  logmm2exp.py  lt2exp.py  max.py  mm.py  utils.py  vadd.py
scripts/: convert_plots_png.sh  log_benchmarks.sh  plot_benchmark.py  run_benchmarks.sh  static_check.sh
tests/: add.py  conftest.py  lm2exp.py  logmm2exp.py  lt2exp.py  max.py  mm.py  vadd.py
triturus/: add.py  lm2exp.py  logmm2exp.py  lt2exp.py  max.py  mm.py  utils.py  vadd.py
